<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="itemCount"
            type="java.lang.Integer" />

        <variable
            name="tabIndex"
            type="java.lang.Integer" />

        <variable
            name="activity"
            type="com.stationmillenium.android.replay.activities.ReplayActivity" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/replay_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/replay_coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/replay_appbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/replay_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:theme="@style/MaterialTheme.Toolbar"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <TextView
                    android:id="@+id/replay_count"
                    style="@style/MaterialTheme.ToolbarTextView.Italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@{(safeUnbox(tabIndex) == 1) ? @plurals/replay_count(itemCount, itemCount) : @plurals/playlist_count(itemCount, itemCount)}"
                    app:layout_scrollFlags="scroll|enterAlways" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/replay_tabs"
                    style="@style/MaterialTheme.Tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlways" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/replay_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/search_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/action_button_margin"
                android:layout_marginEnd="@dimen/action_button_margin"
                android:layout_marginRight="@dimen/action_button_margin"
                android:onClick="@{() -> activity.triggerSearch()}"
                android:src="@drawable/ic_replay_search"
                app:backgroundTint="@color/primary_dark"
                app:layout_anchor="@id/replay_viewpager"
                app:layout_anchorGravity="bottom|right|end" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <include layout="@layout/navigation_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>