<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/replay_srl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/replay_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            android:paddingLeft="5dp"
            android:paddingRight="3dp"/>

    </android.support.v4.widget.SwipeRefreshLayout>

</layout>