...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:replayImage="@{replayItem}"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/replay_title"
                style="@style/MaterialTheme.Text.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
...
                android:layout_marginStart="4dp"
                android:text="@string/replay_date_duration_separator"
                app:layout_constraintBaseline_toBaselineOf="@+id/replay_count"
                app:layout_constraintLeft_toRightOf="@+id/replay_count" />

            <TextView
                android:id="@+id/replay_date"
                style="@style/MaterialTheme.Text.Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@{replayItem.date}"
...
