<!-- Menu search history activity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:millenium="http://schemas.android.com/apk/res-auto">

    <!-- Search menu item -->
    <item
        android:id="@+id/replay_search_menu"
        millenium:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        millenium:showAsAction="collapseActionView|ifRoom"
        android:title="@string/replay_search_menu"
        android:visible="false"/>

</menu>